# ObsidianNBT

./: Cargo.toml  README.md
.github/workflows/: vitepress.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: getting-started.md  nbt-format.md
